[gd_scene load_steps=3 format=3 uid="uid://cyn14d54c83tf"]

[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="1_6htbk"]
[ext_resource type="Script" uid="uid://yw13eftfpxkq" path="res://pages/level_lists/level_panel/level_tab.gd" id="1_gkoqg"]

[node name="LevelTab" type="TabBar"]
script = ExtResource("1_gkoqg")
metadata/_tab_index = 0

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 799.0
offset_top = 736.0
offset_right = 1077.0
offset_bottom = 804.0
theme = ExtResource("1_6htbk")
theme_override_font_sizes/font_size = 16

[node name="LoadLabel" type="Label" parent="LoadButton"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 37.0
offset_top = 15.0
offset_right = 229.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 30
text = "Load"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 61.0
offset_right = 1031.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 30
text = "-- Campaign --"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 152.0
offset_right = 1714.0
offset_bottom = 720.0
horizontal_scroll_mode = 0

[node name="RowHolder" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1500, 550)
layout_mode = 2
columns = 3

[node name="HTTPRequest" type="HTTPRequest" parent="."]
